--- a/grc338/redesign-content-hierarchy/connect.html
+++ b/grc338/redesign-content-hierarchy/connect.html
@@ -2,33 +2,40 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <meta name="viewport" content="width=device‑width, initial‑scale=1.0">
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="https://use.typekit.net/oqb2jsl.css">
         <title>Connect | Bop Street Records</title>
     </head>
     <body>
-        <img src="images/logo.png" alt="Bop Street Records Logo">
-        <div class="mainmenu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="https://www.ebay.com/usr/bopstreetrecords">Online Store</a></li>
-                <li><a href="connect.html">Connect</a></li>
-            </ul>
+        <div class="container">
+            <div class="head">
+                <a href="index.html"><img src="images/logo.png" alt="Bop Street Records Logo."></a>
+            </div>
+            <div class="mainmenu">
+                <ul>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="connect.html">Connect</a></li>
+                    <li class="button"><a href="https://www.ebay.com/usr/bopstreetrecords">Online Store</a></li>
+                </ul>
+            </div>
+            <div class="cover">
+                <img src="images/bopstreet-inside.jpg" alt="Bop Street Records Interior.">
+                <h1 class="center-overlap">Come on in!</h1>
+            </div>
+            <div class="connect">
+                <p>For every customer that walks into Bop Street, Dave personally greets you and gives you a tour of the store. Drop by Bop Street Records and experience one of the five best music stores in America!</p>
+                <h2>Location</h2>
+                    <p>2220 NW Market St.<br>Seattle WA 98107</p>
+                <h2>Store Hours</h2>
+                    <p>Monday: Closed<br>Tuesday-Wednesday: Noon-8PM <br>Thursday-Saturday: Noon-10PM<br>Sunday: Noon-5PM</p>
+                <h2>Contact Us</h2>
+                    <p>206.297.2232</p>
+                <a class="tour" href="https://www.google.com/maps/place/Bop+Street+Records/@47.6689162,-122.3857347,2a,75y,3.2h,89.95t/data=!3m6!1e1!3m4!1smGsQb9pDBWOjCC8Wg1dTtg!2e0!7i13312!8i6656!4m5!3m4!1s0x0:0x8d7c029d9dedf6dd!8m2!3d47.6688376!4d-122.3857815?hl=en-US">Click Here to Take a Virtual Tour!</a>
+            </div>
+            <footer>
+                <h6>©2016 Bop Street Records LLC</h6>
+            </footer>
         </div>
-        <div class="connect">
-            <h1>Come on in!</h1>
-            <p>Bop Street is centrally located on 2220 NW Market Street in the heart of Seattle's Ballard business district. For every customer that walks into Bop Street, Dave personally greets you and gives you a tour of the store. Drop by Bop Street Records and experience one of the five best music stores in America!<p>
-            <h2>Location</h2>
-                <h3>2220 NW Market St.<br>Seattle WA 98107</h3>
-            <h2>Store Hours</h2>
-                <h3>MON: Closed<br>TUE-WED: Noon-8PM <br>THUR-SAT: Noon-10PM<br>SUN: Noon-5PM</h3>
-            <h2>Contact Us</h2>
-                <h3>206.297.2232</h3>
-                <a href="https://www.google.com/maps/place/Bop+Street+Records/@47.6689162,-122.3857347,2a,75y,3.2h,89.95t/data=!3m6!1e1!3m4!1smGsQb9pDBWOjCC8Wg1dTtg!2e0!7i13312!8i6656!4m5!3m4!1s0x0:0x8d7c029d9dedf6dd!8m2!3d47.6688376!4d-122.3857815?hl=en-US">Take a Virual Tour!</a>
-            <img src="images/exterior.jpg" alt="Bop Street Records Exterior">
-        </div>
-        <footer>
-            <h6>©2016 Bop Street Records LLC</h6>
-        </footer>
     </body>
 </html>
