--- a/grc338/redesign-content-hierarchy/history.html
+++ b/grc338/redesign-content-hierarchy/history.html
@@ -2,27 +2,36 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <meta name="viewport" content="width=device‑width, initial‑scale=1.0">
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="https://use.typekit.net/oqb2jsl.css">
         <title>History | Bop Street Records</title>
     </head>
     <body>
-        <img src="images/logo.png" alt="Bop Street Records Logo">
-        <div class="mainmenu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="https://www.ebay.com/usr/bopstreetrecords">Online Store</a></li>
-                <li><a href="connect.html">Connect</a></li>
-            </ul>
-        </div>
-        <div class="history">
-            <h2>The Story of Bop Street Records</h2>
+        <div class="container">
+            <div class="head">
+                <a href="index.html"><img src="images/logo.png" alt="Bop Street Records Logo."></a>
+            </div>
+            <div class="mainmenu">
+                <ul>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="connect.html">Connect</a></li>
+                    <li class="button"><a href="https://www.ebay.com/usr/bopstreetrecords">Online Store</a></li>
+                </ul>
+            </div>
+            <div class="cover">
+                <img src="images/record.jpg" alt="Spinning record.">
+                <h1 class="center-overlap">In 1974...</h1>
+            </div>
+            <div class="history">
+                <h2>History</h2>
+                <img src="images/dave.jpg" alt="Dave Voorhees.">
                 <p>Dave Voorhees started in the music retail business selling 45's out of his parent's North Seattle home back in 1974. On a trip to Texas, he uncovered 3,000 rare Blues records that were in high demand by vinyl collectors. Word of mouth quickly spread of his vintage collection, prompting Dave to look for a storefront to sell his goods. In 1979, he established his first retail space and eventually settled on a location in Seattle's Ballard neighborhood in 1984.</p>
                 <p>Over nearly thirty years, Bop Street Records has expanded its inventory to more than half a million records. All musical genres are available from Rock, Jazz, Blues, Soul/R&B to Country, Folk, World, Kids', Soundtracks and others. The store carries over 10,000 Classical LP's, an extensive collection of 45's, 78's, 8-Track and Cassette tapes. The store has been visted by members of the bands Radiohead, The Pogues, Pearl Jam and many others. Questlove of The Roots and Jonathan Richman have lost themselves in his fabulous archive. </p>
-            <img src="images/dave.jpg" alt="Dave Voorhees">
+            </div>
+            <footer>
+                <h6>©2016 Bop Street Records LLC</h6>
+            </footer>
         </div>
-        <footer>
-            <h6>©2016 Bop Street Records LLC</h6>
-        </footer>
     </body>
 </html>
