--- a/grc338/redesign-content-hierarchy/index.html
+++ b/grc338/redesign-content-hierarchy/index.html
@@ -2,26 +2,31 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <meta name="viewport" content="width=device‑width, initial‑scale=1.0">
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="https://use.typekit.net/oqb2jsl.css">
         <title>Bop Street Records</title>
     </head>
     <body>
-        <img src="images/logo.png" alt="Bop Street Records Logo">
-        <div class="mainmenu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="https://www.ebay.com/usr/bopstreetrecords">Online Store</a></li>
-                <li><a href="connect.html">Connect</a></li>
-            </ul>
+        <div class="container">
+            <div class="head">
+                <a href="index.html"><img src="images/logo.png" alt="Bop Street Records Logo."></a>
+            </div>
+            <div class="mainmenu">
+                <ul>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="connect.html">Connect</a></li>
+                    <li class="button"><a href="https://www.ebay.com/usr/bopstreetrecords">Online Store</a></li>
+                </ul>
+            </div>
+            <div class="cover">
+                <img src="images/bopstreetrecords.jpg" alt="Bop Street Records Store Interior.">
+                <h1 class="overlap">Over <br><span class="big">500,000</span><br> records in stock</h1>
+                <h2>Selling the finest quality vintage collectible vinyl LPs, 45's and 78's since 1974</h2>
+            </div>
+            <footer>
+                <h6>©2016 Bop Street Records LLC</h6>
+            </footer>
         </div>
-        <div>
-            <h1>Selling the finest quality vintage collectible vinyl LPs, 45's and 78's since 1974</h1>
-            <img src="images/bopstreet-inside.jpg" alt="Bop Street Records Store Interior">
-                <h2>Over 500,000 records in stock</h2>
-        </div>
-        <footer>
-            <h6>©2016 Bop Street Records LLC</h6>
-        </footer>
     </body>
 </html>
