--- a/grc338/redesign-content-hierarchy/connect.html
+++ b/grc338/redesign-content-hierarchy/connect.html
@@ -21,9 +21,9 @@
             </div>
             <div class="cover">
                 <img src="images/bopstreet-inside.jpg" alt="Bop Street Records Interior.">
-                <h1 class="center-overlap">Come on in!</h1>
             </div>
             <div class="connect">
+                <h1>Come on in!</h1>
                 <p>For every customer that walks into Bop Street, Dave personally greets you and gives you a tour of the store. Drop by Bop Street Records and experience one of the five best music stores in America!</p>
                 <h2>Location</h2>
                     <p>2220 NW Market St.<br>Seattle WA 98107</p>
