--- a/grc338/redesign-content-hierarchy/index.html
+++ b/grc338/redesign-content-hierarchy/index.html
@@ -21,7 +21,9 @@
             </div>
             <div class="cover">
                 <img src="images/bopstreetrecords.jpg" alt="Bop Street Records Store Interior.">
-                <h1 class="overlap">Over <br><span class="big">500,000</span><br> records in stock</h1>
+            </div>
+            <div class="home">
+                <h1>Over 500,000 records in stock</h1>
                 <h2>Selling the finest quality vintage collectible vinyl LPs, 45's and 78's since 1974</h2>
             </div>
             <footer>
