--- a/grc338/redesign-content-hierarchy/connect.html
+++ b/grc338/redesign-content-hierarchy/connect.html
@@ -16,7 +16,6 @@
                 <ul>
                     <li><a href="history.html">History</a></li>
                     <li><a href="connect.html">Connect</a></li>
-                    <li class="button"><a href="https://www.ebay.com/usr/bopstreetrecords">Online Store</a></li>
                 </ul>
             </div>
             <div class="cover">
@@ -30,8 +29,9 @@
                 <h2>Store Hours</h2>
                     <p>Monday: Closed<br>Tuesday-Wednesday: Noon-8PM <br>Thursday-Saturday: Noon-10PM<br>Sunday: Noon-5PM</p>
                 <h2>Contact Us</h2>
-                    <p>206.297.2232</p>
-                <a class="tour" href="https://www.google.com/maps/place/Bop+Street+Records/@47.6689162,-122.3857347,2a,75y,3.2h,89.95t/data=!3m6!1e1!3m4!1smGsQb9pDBWOjCC8Wg1dTtg!2e0!7i13312!8i6656!4m5!3m4!1s0x0:0x8d7c029d9dedf6dd!8m2!3d47.6688376!4d-122.3857815?hl=en-US">Click Here to Take a Virtual Tour!</a>
+                <p>206.297.2232</p>
+                <a class="button" href="https://www.ebay.com/usr/bopstreetrecords">Shop Our Ebay Store</a>
+                <a class="button" href="https://www.google.com/maps/place/Bop+Street+Records/@47.6689162,-122.3857347,2a,75y,3.2h,89.95t/data=!3m6!1e1!3m4!1smGsQb9pDBWOjCC8Wg1dTtg!2e0!7i13312!8i6656!4m5!3m4!1s0x0:0x8d7c029d9dedf6dd!8m2!3d47.6688376!4d-122.3857815?hl=en-US">Click Here to Take a Virtual Tour!</a>
             </div>
             <footer>
                 <h6>©2016 Bop Street Records LLC</h6>
