--- a/grc338/redesign-mobile-first/index.html
+++ b/grc338/redesign-mobile-first/index.html
@@ -18,16 +18,14 @@
                     <li><a href="connect.html">Connect</a></li>
                 </ul>
             </div>
-            <div class="cover">
-                <img src="images/bopstreetrecords.jpg" alt="Bop Street Records Store Interior.">
-            </div>
+            <img src="images/bopstreetrecords.jpg" alt="Bop Street Records Store Interior.">
             <div class="home">
                 <h1>Over 500,000 records in stock</h1>
                 <h2>Selling the finest quality vintage collectible vinyl LPs, 45's and 78's since 1974</h2>
             </div>
-            <footer>
+            <div class="foot">
                 <h6>©2016 Bop Street Records LLC</h6>
-            </footer>
+            </div>
         </div>
     </body>
 </html>
