--- a/grc338/redesign-content-hierarchy/connect.html
+++ b/grc338/redesign-content-hierarchy/connect.html
@@ -18,9 +18,7 @@
                     <li><a href="connect.html">Connect</a></li>
                 </ul>
             </div>
-            <div class="cover">
-                <img src="images/bopstreet-inside.jpg" alt="Bop Street Records Interior.">
-            </div>
+            <img src="images/bopstreet-inside.jpg" alt="Bop Street Records Interior.">
             <div class="connect">
                 <h1>Come on in!</h1>
                 <p>For every customer that walks into Bop Street, Dave personally greets you and gives you a tour of the store. Drop by Bop Street Records and experience one of the five best music stores in America!</p>
@@ -33,9 +31,9 @@
                 <a class="button" href="https://www.ebay.com/usr/bopstreetrecords">Shop Our Ebay Store</a>
                 <a class="button" href="https://www.google.com/maps/place/Bop+Street+Records/@47.6689162,-122.3857347,2a,75y,3.2h,89.95t/data=!3m6!1e1!3m4!1smGsQb9pDBWOjCC8Wg1dTtg!2e0!7i13312!8i6656!4m5!3m4!1s0x0:0x8d7c029d9dedf6dd!8m2!3d47.6688376!4d-122.3857815?hl=en-US">Click Here to Take a Virtual Tour!</a>
             </div>
-            <footer>
+            <div class="foot">
                 <h6>©2016 Bop Street Records LLC</h6>
-            </footer>
+            </div>
         </div>
     </body>
 </html>
