--- a/grc339/final-website-mobile-first/index.html
+++ b/grc339/final-website-mobile-first/index.html
@@ -40,6 +40,15 @@
                         </a>    
                     </section>
                     
+                    <section class="teasergallery"> <!-- ★ Example of a teaser with image.  You may want to give it a different class. -->
+                        <a href="photogallery.html">
+                            <figure>
+                                <img src="images/makeup4.jpg" alt="Hunter Schafer from 'Euphoria' wearing light pink eyeshadow. Her eyebrows are gold and glittery and there are also larger chunks of gold glitter at the outer sides of her eyes.">
+                            </figure>
+                            <h3>The Makeup of 'Euphoria' (Gallery)</h3>
+                        </a>    
+                    </section>
+                    
                     <section class="teaserimage"> <!-- ★ Example of a teaser with image.  You may want to give it a different class. -->
                         <a href="#">
                             <figure>
